--- a/index.html
+++ b/index.html
@@ -7,53 +7,32 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css">
-  <link rel="stylesheet" href="style.css">
-  <title>Who's that Pokemon!</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Who's That Pokemon!</title>
 </head>
 
 <body>
+  <div class="container">
+    <h1></h1>
+  </div>
 
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Who's that Pokemon!</h1>
+  <div class="row">
+    <div class="col-6 my-4 text-center">
+      <img class="pokeImg" src="assets/images/0.png" alt="Mystery Pokemon" id="pokemonImg">
     </div>
   </div>
 
   <div class="row">
-    <div id="carouselExampleSlidesOnly" class="col-6 carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="..." alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="..." alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="..." alt="Third slide">
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row d-flex justify-content-center">
-    <div class="col-6 card">
-      <h5 class="card-header">Featured</h5>
+    <div class="col-5 card text-white quiz-box">
+      <h5 class="card-header">Can you guess who's that Pokemon?<span class="timer-text">Timer:<span id="timer"></span>00:00</span>&nbsp;s</h5>
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-          <label class="form-check-label" for="inlineRadio1">1</label>
+        <div class="text-center form-text" id="form">
         </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-          <label class="form-check-label" for="inlineRadio2">2</label>
+        
+        <div class="text-center">
+          <br>
+          <a href="#" class="btn btn-warning center-block" id="submit">Submit</a>
         </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
-          <label class="form-check-label" for="inlineRadio3">3</label>
-        </div>
-        <br>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
   </div>
@@ -63,6 +42,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/js/bootstrap.min.js"></script>
+  <script src="assets/javascript/game.js"></script>
 </body>
 
 </html>
