deleted .DS_Store and excess comments

--- a/index.html
+++ b/index.html
@@ -27,8 +27,25 @@
       <h5 class="card-header">Can you guess who's that Pokemon?<span class="timer-text">Timer:<span id="timer"></span>00:00</span>&nbsp;s</h5>
       <div class="card-body">
         <div class="text-center form-text" id="form">
+
+          <!-- this is from the second attempt(tried to create the radio buttons beforehand) -->
+          <!-- <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="userChoice" id="radio1" value="option1">
+            <label class="form-check-label" for="radio1" id="label1">Placeholder</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="userChoice" id="radio2" value="option2">
+            <label class="form-check-label" for="radio1">Placeholder</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="userChoice" id="radio2" value="option2">
+            <label class="form-check-label" for="radio1">Placeholder</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="userChoice" id="radio3" value="option3">
+            <label class="form-check-label" for="radio1">Placeholder</label>
+          </div> -->
         </div>
-        
         <div class="text-center">
           <br>
           <a href="#" class="btn btn-warning center-block" id="submit">Submit</a>
