looping through images/options

--- a/index.html
+++ b/index.html
@@ -17,25 +17,24 @@
   </div>
 
   <div class="row">
-    <div class="col-6 my-4 text-center">
-      <img class="pokeImg" src="assets/images/0.png" alt="Mystery Pokemon" id="pokemonImg">
-    </div>
-  </div>
+    <div class="col-5 position">
+      <div class="text-center">
+        <img class="pokeImg imgSize" src="" alt="Mystery Pokemon" id="imgDiv">
+      </div>
 
-  <div class="row">
-    <div class="col-5 card text-white quiz-box">
-      <h5 class="card-header">Can you guess who's that Pokemon?<span class="timer-text">Timer:<span id="timer"></span>00:00</span>&nbsp;s</h5>
-      <div class="card-body">
-        <div class="text-center form-text" id="form">
-        </div>
-        <div class="text-center">
-          <br>
-          <a href="#" class="btn btn-warning center-block" id="submit">Submit</a>
+      <div class="card text-white quiz-box my-3">
+        <h5 class="card-header">Can you guess who's that Pokemon?<span class="timer-text">Timer:&nbsp;<span id="timer"></span>00:00</span>&nbsp;s</h5>
+        <div class="card-body">
+          <div class="text-center form-text" id="form">
+          </div>
+          <div class="text-center">
+            <br>
+            <a href="#" class="btn btn-warning center-block" id="submit">Submit</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
-
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
