--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class="card text-white quiz-box my-3">
-        <h5 class="card-header">Can you guess who's that Pokemon?<span class="timer-text">Timer:&nbsp;<span id="timer"></span>00:00</span>&nbsp;s</h5>
+        <h5 class="card-header">Can you guess who's that Pokemon?<span class="timer-text"><span id="timer">0 seconds</span></span></h5>
         <div class="card-body">
           <div class="text-center form-text" id="form">
           </div>
